# ppt-redwood

./: .gitignore  Procfile  README.md  README_CN.md  example.env  pyproject.toml
src/: api_server.py  manual_run.py  model.py  server.py  utils.py
src/assets/: layouts_template.yaml  prompt.txt  prompt_template.txt
src/dev/: backup.txt  backup_layout.json  edit_orale_template.ipynb  layouts_all.yaml  layouts_description - static.yaml  layouts_description.yaml  maintain.py  print_layout_placeholders.py  test.ipynb
